# Bstream

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  gen-code-cov.sh  setup.py
doc/html/: .buildinfo  genindex.html  index.html  license.html  objects.inv  search.html  searchindex.js
doc/html/_modules/: index.html
doc/html/_sources/: license.rst.txt
doc/html/_sources/reference/: index.rst.txt
doc/html/_sources/reference/classes/: graph.rst.txt
doc/html/reference/: index.html
doc/html/reference/algorithms/: generators.html  index.html
doc/html/reference/classes/: bipartite.html  digraph.html  graph.html  index.html
doc/source/: conf.py  index.rst
doc/source/reference/: index.rst
doc/source/reference/algorithms/: index.rst
doc/source/reference/classes/: digraph.rst  graph.rst  index.rst
docs/: .buildinfo  Makefile  genindex.html  index.html  install.html  license.html  make.bat  objects.inv  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt  install.rst.txt
docs/_sources/reference/: index.rst.txt
docs/_sources/reference/classes/: bipartite.rst.txt  digraph.rst.txt  graph.rst.txt
docs/doxygen/: Doxyfile
docs/doxygen/html/: _bi_link_stream_base_8hpp_source.html  _bipartite_base_8cpp.html  _bipartite_base_8hpp.html  _bipartite_base_8hpp_source.html  _c_s_v_reader_8hpp.html  _c_s_v_reader_8hpp_source.html  _graph_abstract_8hpp.html  _graph_abstract_8hpp_source.html  _graph_base_8hpp_source.html  _graph_type_8hpp_source.html  _link_stream_base_8cpp.html  _link_stream_base_8hpp.html  _link_stream_base_8hpp_source.html  _time_interval_set_8cpp.html  _time_interval_set_8hpp_source.html  annotated.html  bipartite_8hpp.html  bipartite_8hpp_source.html  class_t_interval_set.html  classboost_1_1bstream_1_1_bi_link_stream_base.html  classboost_1_1bstream_1_1_bi_link_stream_base_exception.html  classboost_1_1bstream_1_1_bipartite_base.html  classboost_1_1bstream_1_1_bipartite_base_exception.html  classboost_1_1bstream_1_1_c_s_v_reader.html  classboost_1_1bstream_1_1_c_s_v_reader_exception.html  classboost_1_1bstream_1_1_graph_abstract.html  classboost_1_1bstream_1_1_graph_base.html  classboost_1_1bstream_1_1_graph_base_exception.html  classboost_1_1bstream_1_1_link_stream_base.html  classboost_1_1bstream_1_1_link_stream_base_exception.html  classboost_1_1bstream_1_1_time_interval_set.html  classboost_1_1bstream_1_1_vertex_base_property.html  classes.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7daebd2e9717933b78420f4a5bff3b52.html  dir_d182250f0c231765fc862e69db210731.html  dir_e6df591b0639d4c4807ef64d058833e2.html  dir_ef9d95fdbfd0bdb5aa3d674cde115335.html  erdos__reny_8hpp.html  (+9 more)
docs/doxygen/html/search/: all_1.js  all_2.js  all_5.js  all_8.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js  variables_1.js
docs/html/: genindex.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_sources/reference/algorithms/: generators.rst.txt
docs/html/_sources/reference/classes/: index.rst.txt
docs/html/reference/: index.html
docs/html/reference/algorithms/: generators.html
docs/html/reference/classes/: bipartite.html  digraph.html
docs/reference/: index.html
docs/reference/algorithms/: generators.html  index.html
docs/reference/classes/: bipartite.html  digraph.html  graph.html  index.html
docs/source/: index.rst
src/algorithms/: bipartite.cpp  bipartite.hpp  erdos_reny.hpp
src/algorithms/generators/: erdos_reny.hpp
src/algorithms/metrics/: clustering.hpp  degree.hpp  summary.hpp
src/graph/: BaseGraph.cpp  BaseGraph.hpp  BiLinkStreamBase.cpp  BiLinkStreamBase.hpp  BipartiteBase.cpp  BipartiteBase.hpp  CSVReader.cpp  CSVReader.hpp  GraphAbstract.hpp  GraphBase.cpp  GraphBase.hpp  GraphType.hpp  LinkStreamBase.cpp  LinkStreamBase.hpp  graphio.hpp
src/interface/: Interface.cpp  algorithms_interface.hpp  bilinkstream_interface.hpp  bipartite_algorithms_interface.hpp  bipartite_interface.hpp  csvreader_interface.hpp  digraph_interface.hpp  graph_generators_interface.hpp  graph_interface.hpp  linkstream_interface.hpp  metrics_interfaces.hpp  tintervalset_interface.hpp
src/tinterval/: TimeIntervalSet.cpp  TimeIntervalSet.hpp
src/utils/: utils.hpp
tests/: CMakeLists.txt
tests/algorithms_tests/: CMakeLists.txt  algorithms_tests.cpp
tests/bilinkstream_tests/: CMakeLists.txt  bilinkstream_tests.cpp
tests/bipartite_tests/: CMakeLists.txt  bipartite_tests.cpp  edges.csv
tests/graph_tests/: CMakeLists.txt  edges.csv  graph_tests.cpp
tests/linkstream_tests/: CMakeLists.txt  edges.csv  linkstream_tests.cpp  test_linkstream.csv
tests/python_bilinkstream_tests/: CMakeLists.txt  bilinkstream_tests.py
tests/python_bipartite_tests/: CMakeLists.txt  bipartite_tests.py
tests/python_graph_tests/: CMakeLists.txt  edges.csv  graph_tests.py
tests/python_linkstream_tests/: CMakeLists.txt  linkstream_tests.py
tests/python_timeintervalset_tests/: CMakeLists.txt  tintervalset_tests.py
tests/timeintervalset_tests/: CMakeLists.txt  timeintervalset_tests.cpp
