
SET(TEST_BIPARTITE_SRC_FILES
        bipartite_tests.cpp)

SET(TEST_BIPARTITE_CONFIGURATION_FILES edges.csv)
CONFIGURE_FILE(${TEST_BIPARTITE_CONFIGURATION_FILES} ${PROJECT_BINARY_DIR}/tests/bipartite_tests COPYONLY)

ADD_EXECUTABLE(test_bipartite ${TEST_BIPARTITE_SRC_FILES})

TARGET_LINK_LIBRARIES(test_bipartite pybstream)

ADD_TEST(NAME testBipartite COMMAND test_bipartite)