###
SET(TEST_GRAPH_SRC_FILES
        graph_tests.cpp)

SET(TEST_CONFIGURATION_FILES edges.csv)
CONFIGURE_FILE(${TEST_CONFIGURATION_FILES} ${PROJECT_BINARY_DIR}/tests/graph_tests COPYONLY)

ADD_EXECUTABLE(test_graph ${TEST_GRAPH_SRC_FILES})

TARGET_LINK_LIBRARIES(test_graph pybstream)

ADD_TEST(NAME testGraph COMMAND test_graph)