SET(TEST_LINKSTREAM_SRC_FILES
        linkstream_tests.cpp)

SET(TEST_CONFIGURATION_FILES_1 edges.csv)
SET(TEST_CONFIGURATION_FILES_2 test_linkstream.csv)

CONFIGURE_FILE(${TEST_CONFIGURATION_FILES_1} ${PROJECT_BINARY_DIR}/tests/linkstream_tests COPYONLY)
CONFIGURE_FILE(${TEST_CONFIGURATION_FILES_2} ${PROJECT_BINARY_DIR}/tests/linkstream_tests COPYONLY)
ADD_EXECUTABLE(test_linkstream ${TEST_LINKSTREAM_SRC_FILES})

TARGET_LINK_LIBRARIES(test_linkstream pybstream)

ADD_TEST(NAME testLinkstream COMMAND test_linkstream)